--- a/modules/system/templates/motd.erb
+++ b/modules/system/templates/motd.erb
@@ -1,5 +1,5 @@
                            
-  _/      _/  _/      _/   Welcome to your Virtual Machine!
+  _/      _/  _/      _/   Welcome to your PEEEEEEEEEEEEEEEENIS!!
  _/      _/  _/_/  _/_/    
 _/      _/  _/  _/  _/     This VM has been generated with WebVMGenerator tool,
  _/  _/    _/      _/      available from http://vmg.slynett.com.
